# capabledeputy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  DESIGN.md  LICENSE  README.md  ROADMAP.md  coverage-ratchet.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configs/: approval-patterns.yaml  capdep.example.yaml  decision-inspectors.example.yaml  egress_escalation.example.yaml  email_label_rules.example.yaml  email_label_rules.yaml  envelopes.yaml  expectations.yaml  fs_label_rules.example.yaml  fs_label_rules.yaml  labels.yaml  local-planner.env  models.yaml  operator-primitives.example.py  override_policy.yaml  profiles.yaml  purposes.example.yaml  purposes.yaml  ratification_policy.yaml  relationship_groups.yaml  requirements.example.yaml  resources.example.yaml  risk_preference.json  risk_preference.yaml  risk_register.json  risk_register.yaml  rules.yaml  source_bindings.yaml  tool_families.yaml  upstream-isolated.example.yaml  vault.example.yaml  workflows.yaml
configs/applescript/: README.md  apple-mail-readonly.yaml  keynote-readonly.yaml
configs/curated/: README.md  bundled-python-servers.yaml  github.yaml  google-workspace-community.yaml  google-workspace.yaml  imap.yaml  kagi.yaml  microsoft-365.yaml  multi-credential-github.yaml  notion.yaml  official-reference.yaml  playwright.yaml  slack.yaml
configs/personal-assistant/: README.md  approval-patterns.yaml  daemon.yaml  envelopes.yaml  override_policy.yaml  profiles.yaml  purposes.yaml  relationship_groups.yaml  source_bindings.yaml
configs/policies/: README.md  frequency_cap.star  local_app_confirm.star  onguard_declared_workflows.star  onguard_low_integrity_suggestions.star  onguard_sensitive_publish_confirm.star  purpose_scoped_relax.star  relationship_relax.star  reversible_write_auto.star  sensitive_egress_confirm.star
configs/servers.d.example/: apple-mail.yaml  applescript.yaml  github.yaml  google-gmail.yaml  gws.yaml  imap.yaml  kagi.yaml  keynote.yaml  macos.yaml  numbers.yaml  pages.yaml  playwright.yaml  slack.yaml
demos/: __init__.py
demos/scenarios/: README.md  __init__.py  _helpers.py  bulk_approval_grouped.py  calendar_with_invites.py  clinical_records_research.py  compliance_review_workflow.py  daily_briefing.py  data_blind_disclosure.py  dial_assisted_research.py  email_drafting_workflow.py  expense_categorization.py  financial_integrity_biba.py  flow_pattern_workflows.py  hr_data_handling.py  journal_daily.py  local_doc_drafting.py  local_doc_qa.py  meeting_prep_routine.py  morning_assistant.py  multi_session_handoff.py  news_briefing_workflow.py  optimistic_burn.py  override_workflow.py  prompt_injection_defense.py  risk_dial.py  run_all.py  secure_inbox_triage.py  task_compartments.py  task_lifecycle.py  travel_booking.py
deploy/: capabledeputy.container
docs/: RUNBOOK.md  SURFACES.md  ai-planning-delegation.md  applescript-mcp.md  architecture.md  client-parity.json  commonmark-client-capabilities.md  daily-driver-validation.md  design-v0.9-labeling.md  desktop-agent-ux-rpc-plan.md  email-labeling-design.md  external-mcp-smoke.md  first-run-onboarding-research.md  google-workspace-capability-mapping.md  governance-scope.md  gui-greenfield-design.md  gworkspace-setup.md  hardware-tokens.md  image-generation-adult-model-notes.md  imap-setup.md  implementation-plan.md  improvement-roadmap-2.md  improvement-roadmap.md  index.md  llm-backends.md  llm-flow-patterns.md  local-model-planner.md  macos-desktop-ux-strategy.md  mcp-compatibility-and-security-review.md  mcp-extension-admission-research.md  mcp-spec-review.md  model-candidate-validation.md  model-experiment-plan.md  onguard-clients.md  per-tool-isolation.md  personal-workflow-coverage.md  personal-workflow-policy-cookbook.md  podman-sandbox.md  policy-authoring-design.md  policy-rule-structure.md  (+21 more)
scripts/: __init__.py  _policy_harness.py  audit_scope_honesty.py  benchmark_image_models.py  benchmark_model_experiments.py  benchmark_model_quality.py  bootstrap-dev-env.sh  coverage_matrix.py  coverage_ratchet.py  debug_google_gmail_mcp.py  fetch_core_pro.py  gemma4_quarantine_bench.py  gmail_substack_cleanup.py  lint_risk_register.py  policy_allow.py  policy_assistant.py  policy_constraints.py  policy_deny.py  policy_engine_harness.py  policy_inspectors.py  policy_labels.py  policy_require_approval.py  policy_workflows.py  run-local-daemon-launchd.sh  run-local-daemon-tmux.sh  run_all_policy.py  setup-images-venv.sh  swift_coverage_summary.py  test-gui-generated-images.py  test-gui-inline-image.py  test_capdepmac_gui_interactions.py  verify-gui-parity.py  verify-inline-image-pipeline.py  verify_delegation_mvp.py
skills/: capdep.md  extract-dose.md  summarize-prescription.md
spec/: CapableDeputy.cfg  CapableDeputy.tla  README.md
tests/: _socket_helpers.py  conftest.py  daemon_integration.py  mcp_conformance.py  test_active_context_sourceports.py  test_agent_context.py  test_agent_handlers.py  test_agent_loop.py  test_agent_loop_with_context.py  test_app.py  test_applescript_mcp_server.py  test_approval_bundle.py  test_approval_chokepoint_registration.py  test_approval_destructive_executor.py  test_approval_handlers_group.py  test_approval_library.py  test_approval_pattern.py  test_approval_queue.py  test_approval_route.py  test_approval_sibling_grouping.py  test_approval_signer.py  test_approval_strong_auth.py  test_approval_ttl.py  test_assistant_scenarios.py  test_audit_chain.py  test_audit_chain_cross_file.py  test_audit_events.py  test_audit_handlers.py  test_audit_rotation.py  test_audit_writer.py  test_authoring_cmds.py  test_axis_d.py  test_bundle_structured_tags.py  test_bundle_ttl.py  test_camel_dual_llm.py  test_capdepmac_gui_hooks.py  test_cascade_revocation.py  test_chart_plot_tool.py  test_chat_grant.py  test_chat_reconnect_wiring.py  (+269 more)
(+531 files in other folders)
