[project]
name = "capabledeputy"
version = "0.19.0"
description = "Structurally secure runtime for personal AI agents — a capable deputy, never a confused one."
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
    { name = "Marc Jones", email = "marc@joneslaw.io" },
]
keywords = ["ai", "agent", "security", "capability", "information-flow-control", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.4",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.50",
    "mcp>=1.0",
    # Pinned to a bounded range: SVG snapshot baselines
    # (tests/__snapshots__) are sensitive to Textual's renderer; a
    # major bump would churn them. Widen deliberately, with a
    # --snapshot-update + visual re-review.
    "textual>=8.2,<9",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0",
    "pypdf>=6.11.0",
    "httpx>=0.28.1",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
]

[project.optional-dependencies]
# Sandboxed policy-script runtime (spec-004 P3). Optional: only operators
# who author Starlark policy scripts need it. `StarlarkScriptHost` lazily
# imports it and raises a clear error when the extra is absent, so the
# core install does not pay the cost. Install with `capabledeputy[starlark]`.
# Binding: starlark-pyo3 (PyO3 wrapper over starlark-rust); module `starlark`.
starlark = ["starlark-pyo3>=2026.1"]

[project.scripts]
capdep = "capabledeputy.cli.main:app"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.7",
    "pyright>=1.1.385",
    "hypothesis>=6.115",
    "pexpect>=4.9.0",
    # so the StarlarkScriptHost tests run in CI/dev (the runtime dep
    # itself is an optional extra for end users).
    "starlark-pyo3>=2026.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["A001", "A002", "A003"]

[tool.pyright]
include = ["src", "tests"]
# scripts/ is not type-checked (not in include) but is on extraPaths so
# tests/test_policy_scripts.py can resolve the harness it imports.
extraPaths = ["scripts"]
exclude = ["**/__pycache__", "**/.venv"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=capabledeputy",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "snapshot: visual SVG regression (brittle across Textual bumps; isolate with -m 'not snapshot')",
    "invariant: 003 security-model invariant tests (Principle III).",
    "perf: latency or throughput benchmark (skip with -m 'not perf' on slow CI).",
]

[tool.coverage.run]
source = ["src/capabledeputy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
