[project]
name = "capabledeputy"
version = "0.53.0"
description = "Structurally secure runtime for personal AI agents — a capable deputy, never a confused one."
readme = "README.md"
requires-python = ">=3.14"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
    { name = "Marc Jones", email = "marc@joneslaw.io" },
]
keywords = ["ai", "agent", "security", "capability", "information-flow-control", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.4",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.50",
    "mcp>=1.28.1",
    # Pinned to a bounded range: SVG snapshot baselines
    # (tests/__snapshots__) are sensitive to Textual's renderer; a
    # major bump would churn them. Widen deliberately, with a
    # --snapshot-update + visual re-review.
    "textual>=8.2,<9",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0",
    "pypdf>=6.13.3",
    "httpx>=0.28.1",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
    "mlx-lm>=0.31.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.8"]
images = [
    "mflux>=0.18.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torch>=2.2",
    "diffusers>=0.30",
    "transformers>=5",
    "accelerate>=0.33",
    "safetensors>=0.4",
]
# Sandboxed policy-script runtime (spec-004 P3). Optional: only operators
# who author Starlark policy scripts need it. `StarlarkScriptHost` lazily
# imports it and raises a clear error when the extra is absent, so the
# core install does not pay the cost. Install with `capabledeputy[starlark]`.
# Binding: starlark-pyo3 (PyO3 wrapper over starlark-rust); module `starlark`.
starlark = ["starlark-pyo3>=2026.1"]

[project.scripts]
capdep = "capabledeputy.cli.main:app"
capdep-setup = "capabledeputy.cli.setup_cli:app"
capdep-google-cloud-setup = "capabledeputy.cli.google_cloud_setup:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pyright>=1.1.385",
    "hypothesis>=6.115",
    "pexpect>=4.9.0",
    # so the StarlarkScriptHost tests run in CI/dev (the runtime dep
    # itself is an optional extra for end users).
    "starlark-pyo3>=2026.1",
]

[tool.uv]
# Both environments must be resolvable: local dev is darwin/arm64 (where the
# Apple-only mlx-lm/mflux extras resolve), and CI runs on linux. The Apple-only
# deps carry `platform_system == 'Darwin' and platform_machine == 'arm64'`
# markers, so the linux resolution simply excludes them (mlx/image generation
# is macOS-only by design). Without the linux environment here, `uv sync` fails
# on Ubuntu CI with "current Python platform is not compatible with the
# lockfile's supported environments" (#351).
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["A001", "A002", "A003"]
# scripts/ holds standalone dash-named executables (e.g. verify-gui-parity.py),
# not importable modules, so the invalid-module-name rule does not apply.
"scripts/**/*.py" = ["N999"]

[tool.pyright]
include = ["src", "tests"]
# scripts/ is not type-checked (not in include) but is on extraPaths so
# tests/test_policy_scripts.py can resolve the harness it imports.
extraPaths = ["scripts"]
exclude = ["**/__pycache__", "**/.venv"]
# Point pyright at the project virtualenv so it can resolve installed packages
# (the editable `capabledeputy` install + every dependency). Without this pyright
# reports every import as missing (~2093 spurious reportMissingImports).
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=capabledeputy",
    "--cov-report=term-missing",
    "--cov-report=json:coverage.json",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "snapshot: visual SVG regression (brittle across Textual bumps; isolate with -m 'not snapshot')",
    "invariant: 003 security-model invariant tests (Principle III).",
    "perf: latency or throughput benchmark (skip with -m 'not perf' on slow CI).",
    "external_mcp: opt-in real upstream MCP server smoke tests.",
    "real_model: opt-in real AI model smoke tests.",
    "real_image: opt-in real image generation backend smoke tests.",
]

[tool.coverage.run]
source = ["src/capabledeputy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
